<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="library">Медиатека</string>
    <string name="setting">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="screen_search">Пустой экран поиска</string>
    <string name="screen_library">Пустой экран медиатеки</string>
    <string name="message_for_developer">
        Спасибо разработчикам и разработчицам за крутое приложение!
    </string>
    <string name="your_email">muxaewaelena225@ya.ru</string>
    <string name="subject_message">
        Сообщение разработчикам и разработчицам приложения Playlist Maker
    </string>
    <string name="practicum_offer">https://yandex.ru/legal/practicum_offer/</string>
    <string name="android_developer">https://practicum.yandex.ru/android-developer/</string>
    <string name="nameTrack">Название трека</string>
    <string name="artistName">Исполнитель</string>
    <string name="something_went_wrong">Проблемы со связью\n \nЗагрузка не удалась.
        Проверьте подключение к интернету</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="update">Обновить</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="go_to_the_track">Переходим к треку</string>
    <string name="you_were_looking_for">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="playlists_have_not_been_created">Вы не создали \n ни одного плейлиста</string>
    <string name="your_media_library_empty">Ваша медиатека пуста</string>
    <string name="favorites">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="create">Создать</string>
    <string name="name">Название*</string>
    <string name="description">Описание</string>
    <string name="addToPlaylist">Добавить в плейлист</string>
    <string name="edit_info">Редактировать информацию</string>
    <string name="deletePlaylist">Удалить плейлист</string>
    <string name="share_playlist">Поделиться</string>
    <string name="error_empty_playlist">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отмена</string>
    <string name="delete">Удалить</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="delete_track">Удалить трек</string>
    <string name="confirm_delete_track">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="confirm_delete_playlist">Вы уверены, что хотите удалить этот плейлист?</string>
    <string name="finish_creating_playlist">Завершить создание плейлиста?</string>
    <string name="unsaved_data_will_be_lost">Все несохраненные данные будут потеряны</string>
    <string name="complete">Завершить</string>
</resources>
