<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:stateListAnimator="@null"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="4dp">

        <Button
            android:id="@+id/buttonBack"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:stateListAnimator="@null"
            app:icon="@drawable/ic_arrow_back"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconTint="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingStart="12dp"
            android:paddingTop="12dp"
            android:paddingEnd="86dp"
            android:paddingBottom="12dp"
            android:text="@string/setting"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_title" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="24dp">
    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="21dp"
        android:switchTextAppearance="@style/TextAppearance.AppCompat.Small"
        android:text="@string/dark_theme"
        android:textSize="@dimen/text_size_regular"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:drawableEnd="@drawable/ic_share"
        android:drawableTint="@color/grey"
        android:gravity="center_vertical"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingStart="16dp"
        android:paddingEnd="12dp"
        android:paddingTop="21dp"
        android:paddingBottom="21dp"
        android:stateListAnimator="@null"
        android:text="@string/share"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_regular" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:drawableEnd="@drawable/ic_support"
        android:drawableTint="@color/grey"
        android:gravity="center_vertical"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingStart="16dp"
        android:paddingEnd="12dp"
        android:paddingTop="21dp"
        android:paddingBottom="21dp"
        android:stateListAnimator="@null"
        android:text="@string/support"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/black"
        android:textSize="16sp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:drawableEnd="@drawable/ic_arrow_forward"
        android:drawableTint="@color/grey"
        android:gravity="center_vertical"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingStart="16dp"
        android:paddingEnd="12dp"
        android:paddingTop="21dp"
        android:paddingBottom="21dp"
        android:stateListAnimator="@null"
        android:text="@string/user_agreement"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_regular" />
    </LinearLayout>

</LinearLayout>