<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/YP_blue"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="62dp"
            android:layout_marginBottom="12dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_title" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="24dp"
        android:paddingBottom="12dp">

        <Button
            android:id="@+id/buttonSearch"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:insetTop="0dp"
            android:insetBottom="16dp"
            android:text="@string/search"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_title"
            app:cornerRadius="16dp"
            app:icon="@drawable/ic_search_light_mode"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="@color/black" />

        <Button
            android:id="@+id/buttonLibrary"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:insetTop="0dp"
            android:insetBottom="16dp"
            android:text="@string/library"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_title"
            app:cornerRadius="16dp"
            app:icon="@drawable/ic_library_light_mode"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="@color/black" />

        <Button
            android:id="@+id/buttonSettings"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:insetTop="0dp"
            android:insetBottom="16dp"
            android:text="@string/setting"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_title"
            app:cornerRadius="16dp"
            app:icon="@drawable/ic_settings_light_mode"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="@color/black" />
    </LinearLayout>

</LinearLayout>