<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    android:stateListAnimator="@null"
    android:theme="@style/Base.Theme.PlaylistMaker"
    tools:context=".search.ui.fragment.SearchFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_search"
        style="@style/toolbarStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/search"
        app:titleTextColor="?attr/colorOnPrimary" />

    <FrameLayout
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:background="@drawable/rounded_edittext"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_search">

        <EditText
            android:id="@+id/searchField"
            style="@style/textRegular"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="40dp"
            android:background="?attr/backgroundForSearch"
            android:drawableStart="@drawable/ic_search_little"
            android:drawablePadding="@dimen/icon_padding"
            android:drawableTint="?attr/colorSecondaryVariant"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:lines="1"
            android:paddingVertical="10dp"
            android:singleLine="true"
            android:textColor="@color/YP_black"
            android:textColorHint="?attr/colorSecondaryVariant" />

        <ImageView
            android:id="@+id/clearSearchBar"
            style="@style/buttonClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:paddingHorizontal="12dp"
            android:paddingVertical="10dp"
            android:src="@drawable/ic_clear"
            android:visibility="gone" />
    </FrameLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:layout_marginTop="148dp"
        android:indeterminateTint="@color/YP_blue"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTrackList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
    </FrameLayout>

    <ImageView
        android:id="@+id/placeholderImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="110dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/searchHistoryGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:constraint_referenced_ids="youWereLookingFor, historyWithButton" />

    <TextView
        android:id="@+id/youWereLookingFor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/ys_display_medium"
        android:paddingHorizontal="16dp"
        android:paddingTop="18dp"
        android:paddingBottom="12dp"
        android:text="@string/you_were_looking_for"
        android:textAlignment="center"
        android:textColor="?attr/colorOnPrimary"
        android:textFontWeight="@integer/width_500"
        android:textSize="@dimen/error_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search" />

    <ScrollView
        android:id="@+id/historyWithButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="56dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/youWereLookingFor">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvHistoryList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:reverseLayout="true" />

            <Button
                android:id="@+id/buttonClearHistory"
                style="@style/searchScreenButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/clear_history"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rvHistoryList" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <TextView
        android:id="@+id/placeholderMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/ys_display_medium"
        android:paddingHorizontal="24dp"
        android:textAlignment="center"
        android:textColor="?attr/colorOnPrimary"
        android:textFontWeight="@integer/width_400"
        android:textSize="@dimen/error_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/placeholderImage"
        tools:text="@string/something_went_wrong" />

    <Button
        android:id="@+id/buttonUpdate"
        style="@style/searchScreenButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/update"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/placeholderMessage" />

</androidx.constraintlayout.widget.ConstraintLayout>
